Bug 175558 - counter stops with a wrong displayed total amount
Summary: counter stops with a wrong displayed total amount
Status: RESOLVED FIXED
Alias: None
Product: lskat
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.40
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: martin
URL:
Keywords:
: 300474 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-11-19 09:33 UTC by Uwe Bugla
Modified: 2023-04-16 09:41 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot from 4.14.0 (292.25 KB, image/png)
2014-08-22 01:02 UTC, Martin Walch
Details
screenshot of a game won with 90 or more points (but not to nil) (210.64 KB, image/png)
2018-12-02 19:17 UTC, Martin Walch
Details
screenshot of a game won to nil (196.13 KB, image/png)
2018-12-02 19:18 UTC, Martin Walch
Details
new screenshot of a game won with 90 or more points (but not to nil) (207.43 KB, image/png)
2023-01-23 22:25 UTC, Martin Walch
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Uwe Bugla 2008-11-19 09:33:09 UTC
Version:           1.40 (using KDE 4.1.3)
Compiler:          gcc 4.3 
OS:                Linux
Installed from:    Debian testing/unstable Packages

Playing lskat one player can reach 120 points as maximum (at least theoretically).
However the counter seems to stop at 90 points.

Example to make the bug visible:

I have finished several games with a total score of 104 points.
It shows numerically correct the 104 points, but it shows them like this: 10
                                                                          4

Not like that: 104

Parallely the following dumb message appears:
.... has won the game with 90 points.
Super!
It should be 104 in both cases, shouldn't it?

Can you please fix those 2 bugs in one?

Thanks

Uwe
Comment 1 Uwe Bugla 2008-11-19 09:36:11 UTC
The platform where the bug appears is not "Debian testing", but it is a mixture of Debian Lenny, Sid, and Experimental instead.

So please overwork your standard bug report formulas - they're incomplete.
Comment 2 Frederik Schwarzer 2012-05-22 22:56:17 UTC
*** Bug 300474 has been marked as a duplicate of this bug. ***
Comment 3 Martin Walch 2014-08-22 01:02:30 UTC
Created attachment 88361 [details]
screenshot from 4.14.0

(In reply to Uwe Bugla from comment #0)
> Playing lskat one player can reach 120 points as maximum (at least
> theoretically).
> However the counter seems to stop at 90 points.

This is actually intended behaviour. The message is a bit misleading: the meaning is that that player has won with 90 points or even more and thus the player's score is increased by three and not only by two (like for a won game with less than 90 points).

I guess the text message should be clarified accordingly.

> I have finished several games with a total score of 104 points.
> It shows numerically correct the 104 points, but it shows them like this: 10
>                                                                           4

This problem has already been described in bug #167936 and although that bug report is marked as RESOLVED/FIXED, this should be revisited as I can still reproduce it.

The screenshot shows that the translated message does not fit on the screen.
Comment 4 Andrew Crouthamel 2018-11-12 02:49:44 UTC
Dear Bug Submitter,

This bug has been stagnant for a long time. Could you help us out and re-test if the bug is valid in the latest version? I am setting the status to NEEDSINFO pending your response, please change the Status back to REPORTED when you respond.

Thank you for helping us make KDE software even better for everyone!
Comment 5 Andrew Crouthamel 2018-11-21 04:40:31 UTC
Dear Bug Submitter,

This is a reminder that this bug has been stagnant for a long time. Could you help us out and re-test if the bug is valid in the latest version? This bug will be moved back to REPORTED Status for manual review later, which may take a while. If you are able to, please lend us a hand.

Thank you for helping us make KDE software even better for everyone!
Comment 6 Martin Walch 2018-12-02 19:17:25 UTC
Created attachment 116632 [details]
screenshot of a game won with 90 or more points (but not to nil)

Current state on lskat 1.50 from KDE Applications 18.04.3
Comment 7 Martin Walch 2018-12-02 19:18:23 UTC
Created attachment 116633 [details]
screenshot of a game won to nil

Current state on lskat 1.50 from KDE Applications 18.04.3
Comment 8 Justin Zobel 2023-01-19 00:18:58 UTC
Thank you for reporting this issue in KDE software. As it has been a while since this issue was reported, can we please ask you to see if you can reproduce the issue with a recent software version?

If you can reproduce the issue, please change the status to "REPORTED" when replying. Thank you!
Comment 9 Martin Walch 2023-01-23 22:25:20 UTC
Created attachment 155545 [details]
new screenshot of a game won with 90 or more points (but not to nil)

Yes, still there.
Comment 10 Martin Walch 2023-04-01 07:59:45 UTC
This seems to be theme-specific. At least for me it looks fine with "Egyptian" and "Green Blase". The line wrap only happens with "Oxygen".
Comment 11 Bug Janitor Service 2023-04-01 11:50:11 UTC
A possibly relevant merge request was started @ https://invent.kde.org/games/lskat/-/merge_requests/11
Comment 12 Albert Astals Cid 2023-04-16 09:41:24 UTC
Git commit 563245095e4bc06ac647cc14db1addbd67cb8b9d by Albert Astals Cid, on behalf of Martin Walch.
Committed on 16/04/2023 at 09:39.
Pushed by aacid into branch 'master'.

Fix line wraps in point counters and player names

Split fontWidthUpper into fontWidthName and fontWidthPoints.

Set new values for posName, posPoints, fontWidthName, fontWidthPoints:
 * avoid line breaks in the point counters with the Oxygen theme
 * wrap player names before they reach their field bounds
 * give player names enough room for a second line

Also clean up spelling and whitespace in the rc files.
See also: #167936, #300474

M  +41   -42   grafix/blue.rc
M  +39   -40   grafix/egyptian.rc
M  +39   -40   grafix/oxygen.rc
M  +6    -4    src/scoresprite.cpp

https://invent.kde.org/games/lskat/commit/563245095e4bc06ac647cc14db1addbd67cb8b9d