Fix line wraps in point counters and player names

Split fontWidthUpper into fontWidthName and fontWidthPoints.

Set new values for posName, posPoints, fontWidthName, fontWidthPoints:
 * avoid line breaks in the point counters with the Oxygen theme
 * wrap player names before they reach their field bounds
 * give player names enough room for a second line

Also clean up spelling and whitespace in the rc files.

BUG: 175558
See also: #167936, #300474